--- a/addons/person_notify/config.json
+++ b/addons/person_notify/config.json
@@ -1,14 +1,20 @@
 {
   "name": "Person-Based Notification Router",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "slug": "person_notify",
   "description": "Person-based notification routing with severity levels and user preferences",
   "url": "https://github.com/festion/ha_person_notify",
   "startup": "application",
   "boot": "auto",
   "host_network": true,
-  "options": {},
-  "schema": {},
+  "options": {
+    "log_level": "info"
+  },
+  "schema": {
+    "log_level": "list(trace|debug|info|notice|warning|error|fatal)"
+  },
   "arch": ["amd64", "aarch64", "armv7"],
-  "ingress": false
+  "ingress": true,
+  "ingress_port": 8080,
+  "panel_icon": "mdi:bell-alert"
 }
